added multiple new features

--- a/App/templates/base.html
+++ b/App/templates/base.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add candidate</title>
+    <title>HRM</title>
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- FontAwsome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <!-- Favicon -->
-    <link href={% static "img/favicon.ico" %} rel="shortcut icon">
+    <link href={% static "img/hrm-favicon.png" %} rel="shortcut icon">
     <!-- Icon tabs -->
-    <link href={% static "img/avatar.png" %} rel="shortcut icon">
+    {% comment %} <link href={% static "img/hrm-favicon.png" %} rel="shortcut icon"> {% endcomment %}
     <!-- Static CSS -->
     <link href={% static "css/style.css" %} rel="stylesheet">
 </head>
