--- a/App/templates/home.html
+++ b/App/templates/home.html
@@ -7,34 +7,34 @@
 <div class="main">
     <div class="container">
 <!-- messages -->
-
+<div class='text-center'>
 {% if messages %}
     {% for message in messages %} 
 
-        {% if message.tags %}
-                <div class="text-center alert alert-success alert-dismissible fade show mt-5 mb-3 bg-dark" role="alert" style="width:50%;">
-                    <strong class="text-secondary m-auto alert-heading text-light">
-                        {{ message }}
-                    </strong>
-                    <a href="{% url 'home' %}" type="button" class="close text-light text-lg" data-dismiss="alert" aria-label="Close">
-                        <span aria-hidden="true" class="text-lg">&times;</span>
-                    </a>
-                </div>
-        {% endif %}
+    {% if message.tags %}
+            <div class="text-center alert alert-success alert-dismissible fade show mt-2 mb-1 bg-dark" role="alert" style="width:50%;">
+                <strong class="text-secondary m-auto alert-heading text-light">
+                    {{ message }}
+                </strong>
+                <a href="{% url 'home' %}" type="button" class="btn btn-close text-light" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true" class="text-lg">&times;</span>
+                </a>
+            </div>
+    {% endif %}
 
     {%  endfor %}
 {% endif %}
+        </div>
 
 
+<div class="container mt-3" style="width:95%; font-size:16px;">
 
-<div class="container mt-5" style="width:95%; font-size:16px;">
-   
-    <div class="card p-3 border-dark text-center" style="font-size:18px;">
-        FullStack: SDE-1 &nbsp; Backend: BAC-1 &nbsp; Frontend: FRE-1
-    </div>
-
-    <form method="POST" action="" class="card p-3 mt-3" autocomplete="off" novalidate enctype="multipart/form-data">
+    <form method="POST" action="" class="mt-3" autocomplete="off" novalidate enctype="multipart/form-data">
         {% csrf_token %}
+    <div class='card border-dark p-3'>
+        <span class="btn btn-secondary mb-3" style="font-size:18px; cursor:default">
+            FullStack: SDE-1 &nbsp; Backend: BAC-1 &nbsp; Frontend: FRE-1
+        </span>
         <!-- {{ form | crispy}} for complete form -->
            <div class="row ">
                 <div class="col-4 text-dark" >                    
@@ -59,7 +59,7 @@
                     {{form.mobile|as_crispy_field}}
                 </div>
             </div>
-           
+            
 
             <div class="row">
                 <div class="col-4 text-dark">
@@ -94,12 +94,37 @@
                 {{form.cloud|as_crispy_field}}
             </div>
 
-        <div class="text-dark">
-                {{form.message|as_crispy_field}}
-         </div>
-           
-        <button type="submit" class="btn btn-outline-dark mt-5"  style="width:90px;">Submit</button>
-        
+                <div class="text-dark">
+                        {{form.message|as_crispy_field}}
+                </div>
+
+                <div class="text-dark">
+                    {{form.file|as_crispy_field}}
+        </div>
+
+    </div>
+
+    <div class='card border-dark p-3'>
+        <span class="btn btn-secondary mb-3" style='cursor:default;'>Tech Skills</span>
+       
+        <div class="row">
+            <div class='col-3'>
+                    {{ form.languages | as_crispy_field }}
+            </div>
+            <div class='col-3'>
+                    {{ form.frameworks | as_crispy_field }}
+            </div>
+            <div class='col-3'>
+                    {{ form.databases | as_crispy_field }}
+            </div>
+            <div class='col-3'>
+                    {{ form.other_skills | as_crispy_field }}
+            </div>
+        </div>
+
+        <hr style='border:1px solid gray;' >
+        <button type="submit" class="btn btn-outline-dark btn-sm mt-5"  style="width:90px;">Submit</button>
+    </div>
 
     </form>
 
@@ -108,7 +133,9 @@
 </div>
 
     
-   
+   <div>
+    <br> <br> <br>
+   </div>
 
 
 
