--- a/App/static/css/style.css
+++ b/App/static/css/style.css
@@ -5,6 +5,16 @@ html, body {
     overflow: hidden;
 }
 
+ /* button on register page */
+.my-app{
+    width: 90px;;
+}
+
+a{
+    text-decoration: none;
+}
+
+
 /* Keep the footer always down */
 .wrapper {
     min-height: 100%;
@@ -13,3 +23,4 @@ html, body {
 #footer, .push {
     height: 50px;
 }
+
