--- a/App/templates/base.html
+++ b/App/templates/base.html
@@ -5,7 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HRM</title>
+    <title>
+      {% block title %}
+      Home | HRM
+      {% endblock %}
+    </title>
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- FontAwsome -->
@@ -18,20 +22,22 @@
     <link href={% static "css/style.css" %} rel="stylesheet">
 </head>
 
-<body>
+<body class="d-flex flex-column min-vh-100">
     
       <header>
         
         <div class="navbar navbar-dark bg-dark box-shadow">
           <div class="container d-flex justify-content-between">
             <a href="" class="navbar-brand d-flex align-items-center">
-               
 
-               <i class="fas fa-user-plus"></i>&nbsp;&nbsp;
+              {% block nav-heading %}
+               
+               <i class="fab fa-python"></i> 
+               <strong> &nbsp;HRM</strong> clear-top
+              {% endblock nav-heading %}
               
               
               
-              <strong> &nbsp;Add candidate</strong>
             </a>
             
           </div>
@@ -63,7 +69,7 @@ footer{
     
     <!-- Footer -->
    
-    <footer class="mt-5 bg-dark text-center text-lg-start" id="footer" style="color: #fff; margin-top:150px;">
+    <footer class="mt-auto bg-dark text-center text-lg-start " id="footer" style="color: #fff; margin-top:150px;"> 
       <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
           &copy; {% now "Y" %} Copyright:
           <a class="text-light" href="https://www.twitter.com/siddbadal" style="text-decoration: none;" target="_blank">
