--- a/App/templates/home.html
+++ b/App/templates/home.html
@@ -1,143 +1,44 @@
 {% extends 'base.html' %}
-{% load crispy_forms_tags %}
-
 
 {% block content %}
+    <div class="container card p-3 border-dark text-center mt-5" style="width:50%;">
 
-<div class="main">
-    <div class="container">
-<!-- messages -->
-<div class='text-center'>
-{% if messages %}
-    {% for message in messages %} 
+        <div class='text-center'>
+        {% if messages %}
+            {% for message in messages %} 
+        
+            {% if message.tags %}
+                    <div class="text-center alert alert-success alert-dismissible fade show mt-2 mb-1 bg-dark" role="alert" style="width:80%;">
+                        <strong class="text-secondary m-auto alert-heading text-light">
+                            {{ message }}
+                        </strong>
+                        <button type='button' class='btn btn-class text-light' data-bs-dismiss='alert' aria-label='Close'>
+                        </button>
+                    </div>
+            {% endif %}
+        
+            {%  endfor %}
+        {% endif %}
+      </div>
 
-    {% if message.tags %}
-            <div class="text-center alert alert-success alert-dismissible fade show mt-2 mb-1 bg-dark" role="alert" style="width:50%;">
-                <strong class="text-secondary m-auto alert-heading text-light">
-                    {{ message }}
-                </strong>
-                <a href="{% url 'home' %}" type="button" class="btn btn-close text-light" data-dismiss="alert" aria-label="Close">
-                    <span aria-hidden="true" class="text-lg">&times;</span>
-                </a>
+
+
+
+
+
+
+            <h1>Applications </h1>
+            <h5 class="mt-3">
+                Fullstack: SDE-01 &nbsp;
+                Backend: BAC-01 &nbsp;
+                Frontend: FRE-01 &nbsp;
+            </h5>
+            <hr>
+            <div class="d-grid gap-2 mt-4">
+                <a href="{% url 'register' %}" class="btn btn-info">Register</a>
+                <a href="{% url 'login' %}" class="btn btn-primary w-1/2">SignIn</a>
             </div>
-    {% endif %}
 
-    {%  endfor %}
-{% endif %}
         </div>
 
-
-<div class="container mt-3" style="width:95%; font-size:16px;">
-
-    <form method="POST" action="" class="mt-3" autocomplete="off" novalidate enctype="multipart/form-data">
-        {% csrf_token %}
-    <div class='card border-dark p-3'>
-        <span class="btn btn-secondary mb-3" style="font-size:18px; cursor:default">
-            FullStack: SDE-1 &nbsp; Backend: BAC-1 &nbsp; Frontend: FRE-1
-        </span>
-        <!-- {{ form | crispy}} for complete form -->
-           <div class="row ">
-                <div class="col-4 text-dark" >                    
-                    {{form.firstname|as_crispy_field}}
-                </div>
-                <div class="col-4 text-dark">
-                    {{form.lastname|as_crispy_field}}
-                </div>            
-                <div class="col-4 text-dark">
-                    {{form.job|as_crispy_field}}
-                </div>            
-           </div>
-           
-           <div class="row">
-                <div class="col-4 text-dark">
-                    {{form.email|as_crispy_field}}
-                </div>
-                <div class="col-4 text-dark">
-                    {{form.age|as_crispy_field}}
-                </div>
-                <div class="col-4 text-dark">
-                    {{form.mobile|as_crispy_field}}
-                </div>
-            </div>
-            
-
-            <div class="row">
-                <div class="col-4 text-dark">
-                    {{form.gender|as_crispy_field}}
-                </div>
-                <div class="col-4 text-dark">
-                    {{form.education|as_crispy_field}}
-                </div>
-                <div class="col-4 text-dark">
-                    {{form.city|as_crispy_field}}
-                </div>
-                
-                
-            </div>
-
-            <hr style="border:1px solid black;">
-
-            <div class="row">
-                <div class="col-4 text-dark">
-                    {{form.position|as_crispy_field}}
-                </div>
-                <div class="col-4 text-dark">
-                    {{form.experience|as_crispy_field}}
-                </div>
-                <div class="col-4 text-dark">
-                    {{form.salary|as_crispy_field}}
-                </div>
-                
-                
-            </div>
-            <div class="col-3 text-dark">
-                {{form.cloud|as_crispy_field}}
-            </div>
-
-                <div class="text-dark">
-                        {{form.message|as_crispy_field}}
-                </div>
-
-                <div class="text-dark">
-                    {{form.file|as_crispy_field}}
-        </div>
-
-    </div>
-
-    <div class='card border-dark p-3'>
-        <span class="btn btn-secondary mb-3" style='cursor:default;'>Tech Skills</span>
-       
-        <div class="row">
-            <div class='col-3'>
-                    {{ form.languages | as_crispy_field }}
-            </div>
-            <div class='col-3'>
-                    {{ form.frameworks | as_crispy_field }}
-            </div>
-            <div class='col-3'>
-                    {{ form.databases | as_crispy_field }}
-            </div>
-            <div class='col-3'>
-                    {{ form.other_skills | as_crispy_field }}
-            </div>
-        </div>
-
-        <hr style='border:1px solid gray;' >
-        <button type="submit" class="btn btn-outline-dark btn-sm mt-5"  style="width:90px;">Submit</button>
-    </div>
-
-    </form>
-
-</div>
-</div>
-</div>
-
-    
-   <div>
-    <br> <br> <br>
-   </div>
-
-
-
-
-{% endblock %}
+{% endblock content %}
