--- a/App/templates/register.html
+++ b/App/templates/register.html
@@ -5,10 +5,15 @@
     Register | HRM
 {% endblock title %}
 
-{% block nav-heading %}
-               
-               <i class="fas fa-user-plus"></i> &nbsp;Register
-{% endblock nav-heading %}
+
+{% block nav-content %}
+    <a href="" class="navbar-brand flex-grow-1 text-center text-light" style="left: 50%; transform: translateX(-50%); position:relative;">
+
+        <i class="fas fa-user-plus"></i> &nbsp;
+        <span style="font-size:24px;">Register</span>
+    </a>
+{% endblock nav-content %}
+
 
 
 {% block content %}
