--- a/App/templates/registration/login.html
+++ b/App/templates/registration/login.html
@@ -6,9 +6,12 @@
     Login | HRM
 {% endblock title %}
 
-{% block nav-heading %}           
-        <i class="fas fa-key"></i> &nbsp;login    
-{% endblock nav-heading %}
+{% block nav-content %} 
+<a href="" class="navbar-brand flex-grow-1 text-center text-light" style="left: 50%; transform: translateX(-50%); position:relative;">
+
+        <i class="fas fa-key"></i> &nbsp;login 
+</a>   
+{% endblock nav-content %}
 
 
 
