made changes in db

--- a/App/templates/candidate.html
+++ b/App/templates/candidate.html
@@ -148,9 +148,9 @@
         All Candidates
     </a>
 
-    <a href="{% url 'download_candidate_pdf' candidate.id %}" class="btn btn-info p-2 mt-5 ml-5 fw-bold" style="width:150px;">
+    {% comment %} <a href="{% url 'download_candidate_pdf' candidate.id %}" class="btn btn-info p-2 mt-5 ml-5 fw-bold" style="width:150px;">
         Download PDF
-    </a>
+    </a> {% endcomment %}
   
 </div>
 
