--- a/App/templates/registration/login.html
+++ b/App/templates/registration/login.html
@@ -30,7 +30,9 @@
                     <strong class="text-dark m-auto alert-heading">
                         You need to have admin permission!
                     </strong>
-                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
                 </div>
                 {% endif %}
         </div>
