--- a/App/templates/home.html
+++ b/App/templates/home.html
@@ -3,23 +3,7 @@
 {% block content %}
     <div class="container card p-3 border-dark text-center mt-5" style="width:50%;">
 
-        <div class='text-center'>
-        {% if messages %}
-            {% for message in messages %} 
-        
-            {% if message.tags %}
-                    <div class="text-center alert alert-success alert-dismissible fade show mt-2 mb-1 bg-dark" role="alert" style="width:80%;">
-                        <strong class="text-secondary m-auto alert-heading text-light">
-                            {{ message }}
-                        </strong>
-                        <button type='button' class='btn btn-class text-light' data-bs-dismiss='alert' aria-label='Close'>
-                        </button>
-                    </div>
-            {% endif %}
-        
-            {%  endfor %}
-        {% endif %}
-      </div>
+        {% include 'partials/successMessages.html' %}
 
 
 
