--- a/App/templates/modals/logoutModal.html
+++ b/App/templates/modals/logoutModal.html
@@ -21,7 +21,7 @@
 
 <br>
 <div class='text-danger text-center'>
-    <i class='fas-fa-power-off fa-3x'></i>
+    <i class='fas fa-power-off fa-3x'></i>
 </div>
 <div class='text-center mb-3 mt-3'>Are you sure you want to logout?</div>
 
