--- a/App/templates/register.html
+++ b/App/templates/register.html
@@ -7,11 +7,13 @@
 
 
 {% block nav-content %}
+
     <a href="" class="navbar-brand flex-grow-1 text-center text-light" style="left: 50%; transform: translateX(-50%); position:relative;">
 
         <i class="fas fa-user-plus"></i> &nbsp;
         <span style="font-size:24px;">Register</span>
     </a>
+
 {% endblock nav-content %}
 
 
@@ -24,7 +26,7 @@
 
 
 
-<div class="container mt-3" style="width:95%; font-size:16px;">
+<div class="container mt-3 register-container w-100" style="width:95%; font-size:16px;">
 
     <form method="POST" action="" class="mt-3" novalidate enctype="multipart/form-data">
         {% csrf_token %}
